# gitkritik2

./: .gitignore  .gitlab-ci.yml  .kritikrc.yaml  README.md  mock_test_CI.py  output.txt  pyproject.toml
.github/workflows/: gitkritik2.yml  main.yml
gitkritik2/cli/: display.py  main.py
gitkritik2/core/: config.py  diff_utils.py  llm_interface.py  models.py  tools.py  utils.py
gitkritik2/core/llms/: claude_llm.py  gemini_llm.py  local_llm.py  openai_llm.py
gitkritik2/graph/: build_graph.py
gitkritik2/nodes/: detect_changes.py  detect_ci_context.py  format_output.py  init_state.py  merge_results.py  post_inline.py  post_inline_new.py  post_summary.py  prepare_context.py  resolve_context.py
gitkritik2/nodes/agents/: bug_agent.py  context_agent.py  design_agent.py  style_agent.py  summary_agent.py
gitkritik2/platform/: github.py
